Added bank groups to level data structure

--- a/Flipped/Levels/level_1-1.plist
+++ b/Flipped/Levels/level_1-1.plist
@@ -66,5 +66,14 @@
 		<key>y</key>
 		<integer>4</integer>
 	</dict>
+	<key>bank</key>
+	<array>
+		<dict>
+			<key>kind</key>
+			<string>Color_A</string>
+			<key>amount</key>
+			<integer>1</integer>
+		</dict>
+	</array>
 </dict>
 </plist>
